--- a/SubscribeRemind/MainWindow.xaml
+++ b/SubscribeRemind/MainWindow.xaml
@@ -6,7 +6,11 @@
         xmlns:local="clr-namespace:SubscribeRemind"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+    <Grid RenderTransformOrigin="0.5,0.5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="233*"/>
+            <ColumnDefinition Width="559*"/>
+        </Grid.ColumnDefinitions>
+        <Frame x:Name="Main" Height="450" Width="800"  NavigationUIVisibility="Hidden" Grid.ColumnSpan="2" Margin="0,0,-8,-31"></Frame>
     </Grid>
 </Window>
