Final features added

--- a/SubscribeRemind/MainPage.xaml
+++ b/SubscribeRemind/MainPage.xaml
@@ -9,13 +9,12 @@
       Title="MainPage">
 
     <Grid>
-        <TextBlock HorizontalAlignment="Center" Margin="126,24,121,0" TextWrapping="Wrap" Text="Welcome to PSR! Your Personal Subscription Reminder" VerticalAlignment="Top" Width="545" FontSize="20" FontWeight="Bold" TextDecorations="{x:Null}"/>
-        <Button x:Name="addButton" Content="Add Subscription" HorizontalAlignment="Left" Margin="10,101,0,0" VerticalAlignment="Top" Width="131" Click="AddButton_Click" Height="47" FontWeight="Bold"/>
-        <Button x:Name="removeButton" Content="Remove Subscription" HorizontalAlignment="Left" Margin="10,164,0,0" VerticalAlignment="Top" Width="131" Click="RemoveButton_Click" Height="47" FontWeight="Bold"/>
-        <Button x:Name="viewButton" Content="View Subscriptions" HorizontalAlignment="Left" Margin="10,234,0,0" VerticalAlignment="Top" Width="131" Click="ViewButton_Click" Height="47" FontWeight="Bold"/>
-        <TextBlock x:Name="countdownText" HorizontalAlignment="Left" Margin="404,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="63" Width="297" FontSize="20" FontWeight="Bold" TextDecorations="Underline"/>
-        <Button x:Name="cycleButton" Content="View Next Countdown" HorizontalAlignment="Left" Margin="469,171,0,0" VerticalAlignment="Top" Width="140" Height="40" Click="CycleButton_Click" FontWeight="Bold"/>
-        <Button x:Name="testButton" Content="Button" HorizontalAlignment="Left" Margin="352,381,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <TextBlock HorizontalAlignment="Center" Margin="72,24,47,0" TextWrapping="Wrap" Text="Welcome to PSR! Your Personal Subscription Reminder" VerticalAlignment="Top" Width="681" FontSize="20" FontWeight="Bold" TextDecorations="{x:Null}" FontFamily="Rockwell Extra Bold"/>
+        <Button x:Name="addButton" Content="Add Subscription" HorizontalAlignment="Left" Margin="10,119,0,0" VerticalAlignment="Top" Width="131" Click="AddButton_Click" Height="47" FontWeight="Bold"/>
+        <Button x:Name="removeButton" Content="Remove Subscription" HorizontalAlignment="Left" Margin="10,207,0,0" VerticalAlignment="Top" Width="131" Click="RemoveButton_Click" Height="47" FontWeight="Bold"/>
+        <Button x:Name="viewButton" Content="View Subscriptions" HorizontalAlignment="Left" Margin="10,291,0,0" VerticalAlignment="Top" Width="131" Click="ViewButton_Click" Height="47" FontWeight="Bold"/>
+        <TextBlock x:Name="countdownText" HorizontalAlignment="Left" Margin="296,148,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="63" Width="362" FontSize="20" TextDecorations="{x:Null}" FontFamily="OCR A Extended" FontWeight="Bold"/>
+        <Button x:Name="cycleButton" Content="View Next Countdown" HorizontalAlignment="Left" Margin="346,256,0,0" VerticalAlignment="Top" Width="140" Height="40" Click="CycleButton_Click" FontWeight="Bold"/>
 
 
 
